# proyek-pajak-final

./: .gitignore  QUICK_START.md  README.md  README.txt  SETUP_INSTRUCTIONS.md  debug_setup.bat  emergency_setup.bat  setup_and_start.bat  setup_and_start_localhost.bat  setup_and_start_localhost_FINAL.bat  setup_and_start_localhost_ROBUST.bat  setup_robust.bat  setup_wizard.bat  simple_status.bat  start_localhost.bat  start_only.bat  step1_backend.bat  step2_frontend.bat  step2_frontend_minimal.bat  step2_manual.bat  step2_ultra_simple.bat  step3_test_all.bat  step4_start.bat  success_summary.bat  test_dependencies.bat
backend/: .dockerignore  .env.example  .env.minimal  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_OVERVIEW.md  Dockerfile  INTEGRATION_SETUP_GUIDE.md  LICENSE  README.md  SUPABASE_SETUP.md  app.py  config.py  debug_bukti_setor.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  requirements_basic.txt
backend/.github/: pull_request_template.md
backend/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/.github/workflows/: ci-cd.yml  dependencies.yml
backend/faktur/services/: invoice_processor.py
backend/faktur/utils/: helpers.py
backend/tests/: conftest.py  test_api.py  test_models.py
frontend/: .env.example  API_CLEANUP_SUMMARY.md
frontend/src/components/: HistoryPage.jsx
frontend/src/components/BuktiSetorOCR/: BuktiSetorPage.jsx
frontend/src/components/FakturOCR/: MainOCRPage.jsx
frontend/src/services/: api.js
